Añadida seguridad JWT